--- a/src/components/Blocks/Lifes.css
+++ b/src/components/Blocks/Lifes.css
@@ -3,6 +3,8 @@
 	justify-content: center;
 	align-items: center;
 	margin: 50px;
+	z-index: 10;
+	overflow: visible !important;
 }
 .life {
 	width: 50px;
